[package]
name = "orderbook"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { version = "5.17.2" }
near-contract-standards = "5.17.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = { version = "1.5", features = ["derive"] }
schemars = { version = "0.8", features = ["derive"] }
near-abi = "0.4.3"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
panic = "abort"
strip = true
